# Lem_in

./: CMakeLists.txt  Makefile
includes/: lem-in.h
libprintf/: Makefile  author
libprintf/includes/: ft_printf.h  ft_printf.h.gch
libprintf/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_float_itoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_up_base.c  ft_long_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+24 more)
libprintf/src/: all_for_float.c  format_type.c  ft_printf.c  ft_put_space.c  parse_format.c  precision.c  printf_additional_char.c  printf_additional_char_str.c  printf_int.c  printf_str.c  reload_float.c  reload_width_pointer.c
src/: ants.c  connectivity_matrix.c  count_ants.c  functions.c  get_next_line.c  initialize_map.c  lem-in.c  links.c  parse_map_to_struct.c  rooms.c
