cmake_minimum_required(VERSION 3.15)
project(Lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libprintf/includes)
include_directories(libprintf/libft)

add_executable(Lem_in
        includes/lem-in.h
        libprintf/includes/ft_printf.h
        libprintf/libft/ft_atoi.c
        libprintf/libft/ft_bzero.c
        libprintf/libft/ft_float_itoa.c
        libprintf/libft/ft_isalnum.c
        libprintf/libft/ft_isalpha.c
        libprintf/libft/ft_isascii.c
        libprintf/libft/ft_isdigit.c
        libprintf/libft/ft_isprint.c
        libprintf/libft/ft_itoa.c
        libprintf/libft/ft_itoa_base.c
        libprintf/libft/ft_itoa_up_base.c
        libprintf/libft/ft_long_itoa.c
        libprintf/libft/ft_lstadd.c
        libprintf/libft/ft_lstdel.c
        libprintf/libft/ft_lstdelone.c
        libprintf/libft/ft_lstiter.c
        libprintf/libft/ft_lstmap.c
        libprintf/libft/ft_lstnew.c
        libprintf/libft/ft_memalloc.c
        libprintf/libft/ft_memccpy.c
        libprintf/libft/ft_memchr.c
        libprintf/libft/ft_memcmp.c
        libprintf/libft/ft_memcpy.c
        libprintf/libft/ft_memdel.c
        libprintf/libft/ft_memmove.c
        libprintf/libft/ft_memset.c
        libprintf/libft/ft_putchar.c
        libprintf/libft/ft_putchar_fd.c
        libprintf/libft/ft_putendl.c
        libprintf/libft/ft_putendl_fd.c
        libprintf/libft/ft_putnbr.c
        libprintf/libft/ft_putnbr_fd.c
        libprintf/libft/ft_putstr.c
        libprintf/libft/ft_putstr_fd.c
        libprintf/libft/ft_strcat.c
        libprintf/libft/ft_strchr.c
        libprintf/libft/ft_strclr.c
        libprintf/libft/ft_strcmp.c
        libprintf/libft/ft_strcpy.c
        libprintf/libft/ft_strdel.c
        libprintf/libft/ft_strdup.c
        libprintf/libft/ft_strequ.c
        libprintf/libft/ft_striter.c
        libprintf/libft/ft_striteri.c
        libprintf/libft/ft_strjoin.c
        libprintf/libft/ft_strlcat.c
        libprintf/libft/ft_strlen.c
        libprintf/libft/ft_strmap.c
        libprintf/libft/ft_strmapi.c
        libprintf/libft/ft_strncat.c
        libprintf/libft/ft_strncmp.c
        libprintf/libft/ft_strncpy.c
        libprintf/libft/ft_strnequ.c
        libprintf/libft/ft_strnew.c
        libprintf/libft/ft_strnstr.c
        libprintf/libft/ft_strrchr.c
        libprintf/libft/ft_strsplit.c
        libprintf/libft/ft_strstr.c
        libprintf/libft/ft_strsub.c
        libprintf/libft/ft_strtrim.c
        libprintf/libft/ft_tolower.c
        libprintf/libft/ft_toupper.c
        libprintf/libft/libft.h
        libprintf/src/all_for_float.c
        libprintf/src/format_type.c
        libprintf/src/ft_printf.c
        libprintf/src/ft_put_space.c
        libprintf/src/parse_format.c
        libprintf/src/precision.c
        libprintf/src/printf_additional_char.c
        libprintf/src/printf_additional_char_str.c
        libprintf/src/printf_int.c
        libprintf/src/printf_str.c
        libprintf/src/reload_float.c
        libprintf/src/reload_width_pointer.c
        src/get_next_line.c
        src/lem-in.c
        src/parse_map_to_struct.c
        src/initialize_map.c
        src/count_ants.c
        src/rooms.c
        src/links.c)
